@@ -1,3 +1,12 @@
+2012-02-14  Eric Seidel  <eric@webkit.org>
+
+        Upstream Android's additions to Platform.h
+        https://bugs.webkit.org/show_bug.cgi?id=78536
+
+        Reviewed by Adam Barth.
+
+        * wtf/Platform.h:
+
 2012-02-12  Mark Hahnenberg  <mhahnenberg@apple.com>
 
         Replace old strtod with new strtod
